ops/infra/kubernetes/https-lb/ingress.yaml
# This resource configures the HTTPS load balancer that is used as the
# entrypoint to all HTTPS services running in the cluster.
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https-ingress
  annotations:
    networking.gke.io/managed-certificates: tazj-in, git-tazj-in, www-tazj-in, oslo-pub
spec:
  rules:
    # Route website to, well, the website ...
    - host: tazj.in
      http:
        paths:
          - path: /*
            backend:
              serviceName: website
              servicePort: 8080
    # Same for www.* (the redirect is handled by the website nginx)
    - host: www.tazj.in
      http:
        paths:
          - path: /*
            backend:
              serviceName: website
              servicePort: 8080
    # Route git.tazj.in to the cgit pods
    - host: git.tazj.in
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 6756
    # Route oslo.pub to the nginx instance which serves redirects
    - host: oslo.pub
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 6756
